"added definitions to the notes."

--- a/stats notes.ipynb
+++ b/stats notes.ipynb
@@ -15,11 +15,11 @@
    "source": [
     "## Definitions\n",
     "\n",
-    "Discrete Random Variable:\n",
+    "Discrete Random Variable: a variable which can only take a countable number of values. and whose probabilities sum to one. Goes with PMF's \n",
     "\n",
-    "Continuous Random Variable:\n",
+    "Continuous Random Variable: a variable where the data can take an infinite amount of values. Goes with PDF's.\n",
     "\n",
-    "Independant Random Variables:\n",
+    "Independant Random Variables:  Two random variables are called "dependent" if the probability of events associated with one variable influence the distribution of probabilities of the other variable, and vice-versa.\n",
     "\n",
     "Expectated Value (E(x) or $\\mu$): Let $X$ be a random variable with a finite number of finite outcomes $x_{1}, x_{2}, \\dots, x_{k}$ occurring with probabilities $p_{1}, p_{2}, \\dots, p_{k}$ , respectively. The expectation of $X$ is defined as\n",
     "\n",
